crates/biome_cli/tests/snapshots/main_cases_handle_gs_files/check_gs_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check Code.gs
```

## `Code.gs`

```gs
SpreadsheetApp   =   null ;

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
Code.gs:1:1 lint/suspicious/noGlobalAssign ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × A global variable should not be reassigned.
  
  > 1 │ SpreadsheetApp   =   null ;
      │ ^^^^^^^^^^^^^^
    2 │ 
  
  i Assigning to a global variable can override essential functionality.
  

```

```block
Code.gs format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - SpreadsheetApp···=···null·;
      1 │ + SpreadsheetApp·=·null;
    2 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
