crates/biome_cli/tests/snapshots/main_cases_handle_gs_files/format_gs_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome format --write Code.gs
```

## `Code.gs`

```gs
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
