crates/biome_cli/tests/snapshots/main_cases_handle_gs_files/lint_gs_flags_global_reassignment.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint Code.gs
```

## `Code.gs`

```gs
SpreadsheetApp = null;
Logger = 1;
localVar = 2;

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
Code.gs:1:1 lint/suspicious/noGlobalAssign ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × A global variable should not be reassigned.
  
  > 1 │ SpreadsheetApp = null;
      │ ^^^^^^^^^^^^^^
    2 │ Logger = 1;
    3 │ localVar = 2;
  
  i Assigning to a global variable can override essential functionality.
  

```

```block
Code.gs:2:1 lint/suspicious/noGlobalAssign ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × A global variable should not be reassigned.
  
    1 │ SpreadsheetApp = null;
  > 2 │ Logger = 1;
      │ ^^^^^^
    3 │ localVar = 2;
    4 │ 
  
  i Assigning to a global variable can override essential functionality.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
