crates/biome_cli/tests/snapshots/main_cases_handle_gs_files/lint_gs_globals_are_not_leaked_to_cjs.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint code.cjs
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  }
}
```

## `code.cjs`

```cjs
SpreadsheetApp.getActiveSpreadsheet();
Logger.log("hello");
notAGlobal();

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
code.cjs:1:1 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The SpreadsheetApp variable is undeclared.
  
  > 1 │ SpreadsheetApp.getActiveSpreadsheet();
      │ ^^^^^^^^^^^^^^
    2 │ Logger.log("hello");
    3 │ notAGlobal();
  
  i By default, Biome recognizes browser and Node.js globals.
    You can ignore more globals using the javascript.globals configuration.
  

```

```block
code.cjs:2:1 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The Logger variable is undeclared.
  
    1 │ SpreadsheetApp.getActiveSpreadsheet();
  > 2 │ Logger.log("hello");
      │ ^^^^^^
    3 │ notAGlobal();
    4 │ 
  
  i By default, Biome recognizes browser and Node.js globals.
    You can ignore more globals using the javascript.globals configuration.
  

```

```block
code.cjs:3:1 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The notAGlobal variable is undeclared.
  
    1 │ SpreadsheetApp.getActiveSpreadsheet();
    2 │ Logger.log("hello");
  > 3 │ notAGlobal();
      │ ^^^^^^^^^^
    4 │ 
  
  i By default, Biome recognizes browser and Node.js globals.
    You can ignore more globals using the javascript.globals configuration.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 3 errors.
```
