crates/biome_cli/tests/snapshots/main_cases_handle_gs_files/search_gs_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome search '`SpreadsheetApp`' Code.gs
```

## `Code.gs`

```gs
SpreadsheetApp.getActiveSpreadsheet();
Logger.log("hello");
notAGlobal();

```

# Emitted Messages

```block
Code.gs:1:1 search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  1 │ SpreadsheetApp.getActiveSpreadsheet();

```

```block
Searched 1 file in <TIME>. Found 1 match.
```
